maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:79: error: not enough arguments for method aMurNord: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
    if(!aMurNord()){
                ^ShortestPathMaze:91: error: too many arguments for method estFaceMur: ()Boolean
    if(!estFaceMur(x,y))
                  ^